kubernetes/apps/default/garmin/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: grafana-garmin-internal
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/part-of: grafana-operator
    egress:
      - toEndpoints:
          - matchLabels:
              app.kubernetes.io/name: garmin
        toPorts:
          - ports:
              - port: "8086"
